# cg-shaders

./: CMakeLists.txt  README.md  ShaderWidget.cpp  ShaderWidget.h  main.cpp
